[package]
name = "tcp_wow"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/wow/mod.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
sha2 = "0.10.8"
rand = "0.8"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
log = "0.4"
env_logger = "0.10.0"

[dev-dependencies]
mockstream = "0.0.3"
tempfile = "3.2"
